chore: implementing new scss arch

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,4 +1,2 @@
-@import 'spacing';
-@import 'colors';
-@import 'typography';
-@import 'layout';
+@import 'variables/index';
+@import 'mixins/index';
