--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,2 +1,5 @@
-@import 'variables/index';
-@import 'mixins/index';
+@import 'spacing';
+@import 'colors';
+@import 'typography';
+@import 'layout';
+@import 'breakpoints';
