--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -1,5 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@300;600;800&display=swap');
-
 @import 'reset';
 
 html,
@@ -9,5 +7,5 @@ body {
 
 body {
   margin: 0;
-  font-family: Roboto, 'Helvetica Neue', sans-serif;
+  font-family: 'Nunito Sans', Roboto, 'Helvetica Neue', sans-serif;
 }
