feat: fixing layout + creating header

--- a/src/app/character-list/components/character-card/character-card.component.scss
+++ b/src/app/character-list/components/character-card/character-card.component.scss
@@ -8,7 +8,7 @@
   transition: $transition-all;
   cursor: pointer;
   height: 100%;
-  width: 37.5rem;
+  width: 100%;
   display: flex;
   flex-direction: row;
 
@@ -43,11 +43,11 @@
     display: flex;
     flex-direction: column;
 
-    @media (max-width: 48rem) {
+    @include tablet {
       padding: $spacing-3;
     }
 
-    @media (max-width: 30rem) {
+    @include mobile {
       padding: $spacing-2;
     }
   }
@@ -66,11 +66,11 @@
     text-overflow: ellipsis;
     white-space: nowrap;
 
-    @media (max-width: 48rem) {
+    @include tablet {
       font-size: $text-base;
     }
 
-    @media (max-width: 30rem) {
+    @include mobile {
       font-size: $text-sm;
     }
   }
@@ -81,7 +81,7 @@
     gap: $spacing-1;
     margin-bottom: $spacing-3;
 
-    @media (max-width: 30rem) {
+    @include mobile {
       margin-bottom: $spacing-2;
     }
   }
@@ -128,7 +128,7 @@
       border-bottom: none;
     }
 
-    @media (max-width: 30rem) {
+    @include mobile {
       padding: $spacing-1 0;
     }
   }
@@ -141,7 +141,7 @@
     text-transform: uppercase;
     letter-spacing: $letter-spacing-wide;
 
-    @media (max-width: 30rem) {
+    @include mobile {
       font-size: 0.5rem;
     }
   }
@@ -153,7 +153,7 @@
     margin: 0;
     line-height: $line-height-tight;
 
-    @media (max-width: 30rem) {
+    @include mobile {
       font-size: $text-xs;
     }
   }
