--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,9 @@
-<header>
-  <h1>Ricky And Morty App</h1>
-</header>
+<div class="app">
+  <app-header></app-header>
 
-<router-outlet></router-outlet>
+  <main class="app__main">
+    <div class="app__content">
+      <router-outlet></router-outlet>
+    </div>
+  </main>
+</div>
