--- a/src/app/character-detail/character-detail.component.html
+++ b/src/app/character-detail/character-detail.component.html
@@ -1,1 +1,62 @@
-<p>character-detail works!</p>
+<div class="character-detail">
+  @if (loading$ && !character$) {
+    <div class="character-detail__container">
+      <div class="character-detail__loading">
+        <div class="character-detail__loading-spinner"></div>
+        <p class="character-detail__loading-text">Loading character...</p>
+      </div>
+    </div>
+  }
+
+  @if (!loading$ && error$; as error) {
+    <div class="character-detail__container">
+      <div class="character-detail__error">
+        <div class="character-detail__error-icon">⚠️</div>
+        <p class="character-detail__error-message">Error loading character: {{ error }}</p>
+      </div>
+    </div>
+  }
+
+  @if (character$ | async; as characterData) {
+    <div class="character-detail__container character-detail__container--row">
+      <div class="character-detail__image-wrapper character-detail__image-wrapper--side">
+        <img
+          [src]="characterData.image"
+          [alt]="characterData.name"
+          class="character-detail__image"
+        />
+      </div>
+      <div class="character-detail__info character-detail__info--side">
+        <h2 class="character-detail__name">{{ characterData.name }}</h2>
+        <div class="character-detail__meta character-detail__meta--stacked">
+          <div class="character-detail__status"><b>Status:</b> {{ characterData.status }}</div>
+          <div class="character-detail__species"><b>Species:</b> {{ characterData.species }}</div>
+          @if (characterData.type) {
+            <div class="character-detail__type"><b>Type:</b> {{ characterData.type }}</div>
+          }
+          <div class="character-detail__gender"><b>Gender:</b> {{ characterData.gender }}</div>
+        </div>
+        <div class="character-detail__details-list">
+          <div><span class="character-detail__label">ID:</span> {{ characterData.id }}</div>
+          <div>
+            <span class="character-detail__label">Origin:</span> {{ characterData.origin.name }}
+            @if (characterData.origin.url) {
+              <a [href]="characterData.origin.url" target="_blank">(link)</a>
+            }
+          </div>
+          <div>
+            <span class="character-detail__label">Last Location:</span>
+            {{ characterData.location.name }}
+            @if (characterData.location.url) {
+              <a [href]="characterData.location.url" target="_blank">(link)</a>
+            }
+          </div>
+          <div>
+            <span class="character-detail__label">API URL:</span>
+            <a [href]="characterData.url" target="_blank">{{ characterData.url }}</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  }
+</div>
