--- a/src/app/character-list/character-list.component.html
+++ b/src/app/character-list/character-list.component.html
@@ -18,8 +18,15 @@
       <div class="character-list__header">
         <h2 class="character-list__title">Characters</h2>
         <p class="character-list__subtitle">Explore the Rick and Morty universe</p>
+
+        <app-character-filter (filterChange)="onFilterChange($event)"></app-character-filter>
       </div>
-      <div class="character-list__grid" infiniteScroll (scrolled)="onScroll()">
+      <div
+        class="character-list__grid"
+        infiniteScroll
+        [scrollWindow]="false"
+        (scrolled)="onScroll()"
+      >
         @for (character of characters$ | async; track character.id) {
           <app-character-card
             [character]="character"
