--- a/src/app/character-list/character-list.component.html
+++ b/src/app/character-list/character-list.component.html
@@ -1,4 +1,14 @@
 <div class="character-list">
+  <div class="character-list__header">
+    <h2 class="character-list__title">Characters</h2>
+    <p class="character-list__subtitle">Explore the Rick and Morty universe</p>
+
+    <app-character-filter
+      (filterChange)="onFilterChange($event)"
+      (applyFilters)="applyFilters()"
+    ></app-character-filter>
+  </div>
+
   @switch ((viewState$ | async)?.state) {
     @case (ViewState.LOADING) {
       <div class="character-list__loading">
@@ -12,17 +22,13 @@
         <p class="character-list__error-message">
           Error loading characters: {{ (viewState$ | async)?.error }}
         </p>
+        <button class="character-list__reload-btn" (click)="loadCharacters()">Reload</button>
       </div>
     }
     @case (ViewState.CONTENT) {
-      <div class="character-list__header">
-        <h2 class="character-list__title">Characters</h2>
-        <p class="character-list__subtitle">Explore the Rick and Morty universe</p>
-
-        <app-character-filter (filterChange)="onFilterChange($event)"></app-character-filter>
-      </div>
       <div
         class="character-list__grid"
+        #grid
         infiniteScroll
         [scrollWindow]="false"
         (scrolled)="onScroll()"
