--- a/src/app/character-list/components/character-card/character-card.component.html
+++ b/src/app/character-list/components/character-card/character-card.component.html
@@ -1,4 +1,4 @@
-<div class="character-card">
+<div class="character-card" [class.dark]="isDarkMode">
   <div class="character-card__header">
     <img
       [src]="character.image"
