--- a/src/app/character-list/character-list.component.html
+++ b/src/app/character-list/character-list.component.html
@@ -1,4 +1,4 @@
-<div class="character-list">
+<div class="character-list" [class.dark]="isDarkMode$ | async">
   <div class="character-list__header">
     <h2 class="character-list__title">Characters</h2>
     <p class="character-list__subtitle">Explore the Rick and Morty universe</p>
@@ -37,6 +37,7 @@
           <app-character-card
             [character]="character"
             (click)="onCardSelected(character.id)"
+            [isDarkMode]="!!(isDarkMode$ | async)"
           ></app-character-card>
         }
       </div>
