--- a/src/app/character-list/components/character-card/character-card.component.scss
+++ b/src/app/character-list/components/character-card/character-card.component.scss
@@ -1,7 +1,8 @@
 @import 'variables';
 
 .character-card {
-  background-color: $color-white;
+  background-color: $color-dark-blue;
+  color: $color-white;
   border-radius: $border-radius-lg;
   box-shadow: $shadow-sm;
   overflow: hidden;
@@ -28,7 +29,7 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-    object-position: center center;
+    object-position: center;
     display: block;
     transition: $transition-transform;
 
@@ -59,7 +60,7 @@
   &__title {
     font-size: $text-lg;
     font-weight: $font-weight-bold;
-    color: $color-gray-800;
+    color: $color-white;
     margin: 0;
     line-height: $line-height-tight;
     overflow: hidden;
@@ -149,12 +150,33 @@
   &__detail-value {
     font-size: $text-sm;
     font-weight: $font-weight-medium;
-    color: $color-gray-700;
+    color: $color-white;
     margin: 0;
     line-height: $line-height-tight;
 
     @include mobile {
       font-size: $text-xs;
     }
+  }
+}
+
+.character-card.dark {
+  background-color: $color-very-light-gray;
+  color: $color-dark-blue;
+
+  .character-card__detail-label {
+    color: $color-gray-500;
+  }
+
+  .character-card__detail-value {
+    color: $color-gray-700;
+  }
+
+  .character-card__title {
+    color: $color-gray-800;
+  }
+
+  .character-card__status-text {
+    color: $color-gray-500;
   }
 }
