--- a/src/styles/_buttons.scss
+++ b/src/styles/_buttons.scss
@@ -11,7 +11,7 @@
   border: none;
   border-radius: $border-radius-lg;
   cursor: pointer;
-  font-weight: $font-weight-bold;
+  font-weight: $font-weight-medium;
   transition: background $transition-all;
 
   &:hover {
