--- a/src/styles/_typography.scss
+++ b/src/styles/_typography.scss
@@ -1,6 +1,8 @@
 // Typography Variables
 $font-family: 'Nunito Sans', sans-serif;
 $font-weight-light: 300;
+$font-weight-normal: 400;
+$font-weight-medium: 500;
 $font-weight-semibold: 600;
 $font-weight-extrabold: 800;
 
